third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/array/text-after-array-entries.stderr
TOML parse error at line 2, column 46
  |
2 |   "Is there life after an array separator?", No
  |                                              ^
invalid array
expected `]`
